# elf_parser

./: CMakeLists.txt  Readme.md
example/: main.cpp
src/: Elf32.cpp  Elf32.h  Elf64.cpp  Elf64.h  ElfBase.cpp  ElfBase.h  ElfParser.cpp  ElfParser.h  elf.h  main.cpp
